<resources>
    <string name="app_name">MainFireDrone</string>
    <string name="google_app_id">AIzaSyALZNLEGN6iHu1JntdV2NkEGATa973NvN8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Menu">Menu</string>
    <string name="controle">Contrôle du drône</string>
    <string name="image">Images du drône</string>
    <string name="parcours">Carte</string>
    <string name="planning">Planning</string>
    <string name="directive">Directives</string>
    <string name="rapport">Rapport de terrain</string>
    <string name="moyen">Moyens engagés</string>
    <string name="fiche">Fiche d\'intervention</string>
    <string name="ficheTitre">Fiche d\'intervention</string>
    <string name="ficheMoyen">Moyens engagés</string>
    <string name="ficheRapport">Rapport de terrain</string>
    <string name="ficheDirective">Directive du Centre de Commandement</string>
    <string name="fichePlanning">Planning</string>
    <string name="ficheParcours">Définition du parcours du drône</string>
    <string name="ficheControle">Contrôle du drône</string>
    <string name="ficheImage">Images du drône</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Firedrone</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_hint">Login</string>
    <string name="pass_hint">Password</string>
    <string name="validateLoginButton">Log In</string>
    <string name="add_intervention">Ajouter intervention</string>
    <string name="intervention_info">Infos intervention</string>
    <string name="save_intervention">Sauver intervention</string>
    <string name="lbl_mean_type">Type de moyen : </string>
    <string name="lbl_hour_call">Appelé à  : </string>
    <string name="lbl_hour_arriv">Arrivé à : </string>
    <string name="lbl_hour_engaged">Engagé à  : </string>
    <string name="lbl_hour_free">Libéré à : </string>
    <string name="btn_valid">Valider</string>
    <string name="btn_cancel">Annuler</string>
    <string name="lbl_add_mean">Ajouter un moyen</string>
    <string name="lbl_edit_mean">Modifier un moyen</string>
    <string name="default_admin">admin</string>
    <string name="logodescription">logo-firedrone</string>
    <string name="details">Details intervention</string>
    <integer name="IDX_ID">0</integer>
    <integer name="IDX_CODE">1</integer>
    <integer name="IDX_NAME">2</integer>
    <integer name="IDX_H_CALL">3</integer>
    <integer name="IDX_H_ARRIV">4</integer>
    <integer name="IDX_H_ENGAGED">5</integer>
    <integer name="IDX_H_FREE">6</integer>
    <string name="END_POINT">"http://m2gla-drone.istic.univ-rennes1.fr:8080"</string>
    <string name="home">Home</string>
    <string name="liste">Liste des interventions</string>
    <string name="devenirCOS">Devenir COS</string>
    <string name="libererCOS">Libérer COS</string>
    <string name="validation_codis">Validation moyen</string>
    <string name="close_intervention">Clore intervention</string>
    <string name="back">Retour</string>
    <string name="moyens_demand_s">Moyens demandés</string>
    <string name="menu_trajectoire_drone">Trajectoire du drône:</string>
    <string name="trajectoire_buttonitem_segment">Segment</string>
    <string name="trajectoire_buttonitem_boucle">Boucle</string>
    <string name="trajectoire_buttonitem_zone">Zone</string>
    <string name="trajectoire_buttonitem_exclusion">Exclusion</string>
    <string name="trajectoire_button_start">Start !</string>
    <string name="trajectoire_button_stop">Stop</string>
    <string name="button_ask_drone">Contrôler un Drone</string>
    <string name="button_free_drone">Libérer le Drone</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="array_ways">Tableau des moyens</string>
    <string name="validate_ways">Moyen à valider</string>

</resources>
