<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group_1"
        >
        <item
            android:id="@+id/nav_liste"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/liste" />
        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/ic_menu_camera"
            android:checked="true"
            android:title="@string/details" />
        <item
            android:id="@+id/nav_moyen"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/array_ways" />
        <item
            android:id="@+id/nav_moyen_req"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/validate_ways" />

    </group>

    <group android:title="Centre de commandement"
        android:id="@+id/group_2">
        <menu>

            <item
                android:id="@+id/nav_parcours"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/parcours" />
        </menu>
    </group>

    <group android:title="Drône"
        android:id="@+id/group_3">
        <menu>
            <item
                android:id="@+id/nav_controle"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/controle" />
            <item
                android:id="@+id/nav_image"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/image" />

        </menu>
    </group>
    <group android:title="Utilisateur"
        android:id="@+id/group_4">
        <menu>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="Deconnexion" />
        </menu>
    </group>
</menu>
