<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:focusable="true"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/layout_"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center">

        <Button
            android:id="@+id/buttonAskADrone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_ask_drone"
            android:layout_marginBottom="20dp" />

        <TextView android:id="@+id/label_menu_trajectoire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_trajectoire_drone"
            android:layout_marginBottom="10dp"
            android:textColor="#0041C4"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/Bsegment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trajectoire_buttonitem_segment"
            android:enabled="false"/>

        <Button
            android:id="@+id/Bboucle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trajectoire_buttonitem_boucle"
            android:layout_marginTop="10dp"
            android:enabled="false"/>

        <Button
            android:id="@+id/Bzone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trajectoire_buttonitem_zone"
            android:layout_marginTop="10dp"
            android:enabled="false"/>

        <Button
            android:id="@+id/buttonExclusion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trajectoire_buttonitem_exclusion"
            android:layout_marginTop="10dp"
            android:enabled="false"/>

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trajectoire_button_start"
            android:layout_marginTop="120dp"
            android:enabled="false"/>

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trajectoire_button_stop"
            android:enabled="false"/>

        <Button
            android:id="@+id/buttonFreeDrone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_free_drone"
            android:visibility="invisible"/>

    </LinearLayout>

</ScrollView>
